UI tests updated and new activity added for test

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         <activity android:name=".MainActivity">
         </activity>
 
+        <activity android:name=".DetailActivity">
+        </activity>
+
         <activity android:name=".SecondScoreActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
